# zodiac-sagittarius

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .env.release-signoff.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  DESIGN.md  Makefile  PRODUCT.md  docker-compose.production.yml  docker-compose.yml  eslint.config.mjs  issues.md  package.json  redesign.md  tsconfig.json  ui-issues.md  vitest.config.ts
backend/: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile
backend/crates/api/: Cargo.toml
backend/crates/api/src/: lib.rs  main.rs
backend/crates/api/src/api/: account.rs  bookings.rs  daily_briefings.rs  day_plan_assist.rs  error.rs  exchange_rates.rs  expenses.rs  extractors.rs  health.rs  itinerary.rs  itinerary_imports.rs  join.rs  members.rs  mod.rs  openapi.rs  photo_albums.rs  place_resolution.rs  plan_checks.rs  plan_variants.rs  public_trips.rs  stop_notes.rs  suggestions.rs  tasks.rs  trips.rs  ws.rs
backend/crates/api/tests/: account_auth_contract.rs  account_schema_contract.rs  account_trip_contract.rs  bookings_contract.rs  day_plan_assist_contract.rs  expenses_contract.rs  http_contract.rs  itinerary_import_contract.rs  itinerary_patch_contract.rs  join_session_contract.rs  members_contract.rs  openapi_contract.rs  place_resolution_contract.rs  plan_checks_contract.rs  plan_variants_contract.rs  public_trip_create_contract.rs  realtime_contract.rs  route_contract.rs  schema_contract.rs  trip_load_contract.rs
backend/crates/api/tests/support/: mod.rs
backend/crates/app/: Cargo.toml
backend/crates/app/src/: account_email.rs  account_mappers.rs  account_passkeys.rs  auth.rs  bookings.rs  create_trip.rs  daily_briefings.rs  day_plan_assist.rs  destination_geo.rs  email.rs  events.rs  exchange_rates.rs  expenses.rs  itinerary.rs  itinerary_imports.rs  kernel.rs  lib.rs  members.rs  mutation_guard.rs  openrouter.rs  photo_albums.rs  place_resolution.rs  plan_checks.rs  plan_variants.rs  public_trips.rs  stop_notes.rs  suggestions.rs  tasks.rs  trip_stream.rs  trips.rs
backend/crates/app/src/account/: auth.rs  claims.rs  mod.rs  passkeys.rs  settings.rs  trips.rs  vault.rs
backend/crates/db/: Cargo.toml
backend/crates/db/src/: account_queries.rs  booking_doc_queries.rs  briefing_queries.rs  expense_queries.rs  itinerary_queries.rs  lib.rs  member_queries.rs  photo_album_queries.rs  place_queries.rs  plan_check_queries.rs  queries.rs  realtime_queries.rs  session_queries.rs  stop_note_queries.rs  suggestion_queries.rs  task_queries.rs  trip_queries.rs
backend/crates/db/src/models/: account.rs  bookings.rs  briefings.rs  expenses.rs  itinerary.rs  members.rs  mod.rs  photos.rs  places.rs  plans.rs  shared.rs  tasks.rs  trip.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: errors.rs  expense_patch_rules.rs  lib.rs  money_values.rs  plan_status.rs  uuid_values.rs
backend/crates/domain/src/patches/: account.rs  bookings.rs  briefings.rs  expenses.rs  itinerary.rs  members.rs  mod.rs  photos.rs  plans.rs  shared.rs  tasks.rs  trip.rs
backend/crates/domain/src/types/: account.rs  auth.rs  bookings.rs  briefings.rs  create_trip.rs  day_plan_assist.rs  expenses.rs  itinerary.rs  members.rs  mod.rs  photos.rs  plans.rs  shared.rs  tasks.rs  trip.rs
backend/crates/realtime/: Cargo.toml
backend/crates/realtime/src/: lib.rs
backend/crates/sagittarius-api/: Cargo.toml
backend/crates/sagittarius-api/src/: lib.rs  main.rs
backend/crates/sagittarius-api/src/api/: account.rs  bookings.rs  daily_briefings.rs  error.rs  exchange_rates.rs  expenses.rs  extractors.rs  health.rs  itinerary.rs  itinerary_imports.rs  join.rs  members.rs  mod.rs  photo_albums.rs  place_resolution.rs  plan_checks.rs  plan_variants.rs  stop_notes.rs  suggestions.rs  tasks.rs  trips.rs  ws.rs
backend/crates/sagittarius-api/src/app/: account.rs  account_email.rs  account_mappers.rs  account_passkeys.rs  auth.rs  bookings.rs  daily_briefings.rs  email.rs  events.rs  exchange_rates.rs  expenses.rs  itinerary.rs  itinerary_imports.rs  members.rs  mod.rs  mutation_guard.rs  photo_albums.rs  place_resolution.rs  plan_checks.rs  plan_variants.rs  stop_notes.rs  suggestions.rs  tasks.rs  trips.rs
backend/crates/sagittarius-api/tests/: account_auth_contract.rs  account_schema_contract.rs  account_trip_contract.rs  bookings_contract.rs  daily_briefings_contract.rs  exchange_rates_contract.rs  expenses_contract.rs  http_contract.rs  itinerary_create_contract.rs  itinerary_import_contract.rs  itinerary_patch_contract.rs  join_session_contract.rs  members_contract.rs  permissions_contract.rs  photo_albums_contract.rs  place_resolution_contract.rs  plan_checks_contract.rs  plan_variants_contract.rs  realtime_contract.rs  route_contract.rs  schema_contract.rs  stop_notes_contract.rs  suggestions_contract.rs  tasks_contract.rs  trip_load_contract.rs  workspace_contract.rs
backend/migrations/: 0001_backend_vertical_slice.sql  0001_baseline.sql  0002_account_identity.sql  0003_trip_join_sessions.sql  0004_account_password_auth.sql  0005_account_portal.sql  0006_trip_countries.sql  0007_stop_notes.sql  0008_trip_daily_briefings.sql  0009_trip_join_invite_tokens.sql  0010_itinerary_activity_paths.sql  0011_expense_reminders.sql  0012_expense_exchange_rates.sql  0013_expense_receipts_itemization.sql  0014_expense_notes.sql  0015_expense_comments.sql  0016_place_geocode_cache.sql  0017_booking_docs.sql  0018_auth_attempt_locks.sql  0019_photo_album_links.sql  0020_trip_city_routes.sql  0021_trusted_device_active_label_unique.sql  0022_itinerary_item_details.sql  0023_itinerary_table_v1.sql  0024_plan_check_runtime_grants.sql  0025_trip_plan_compatibility.sql  0026_plan_scoped_records.sql  0027_itinerary_hierarchy_time_windows.sql  0028_plan_check_trip_plan_scope.sql  0029_expense_reminder_trip_plan_scope.sql  0030_itinerary_end_offset_sanitize.sql  0031_itinerary_activity_type_default.sql  0032_itinerary_activity_subtype.sql  0033_expense_spent_on.sql  0034_expense_stored_value_cards.sql  0035_expense_settlement_allocations.sql
(+3915 files in other folders)
