[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/db",
    "crates/realtime",
    "crates/app",
    "crates/api",
]

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.95"

[workspace.dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-human-readable"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.27"
url = "2"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1", features = ["v7", "serde"] }

sagittarius-domain = { path = "crates/domain" }
sagittarius-db = { path = "crates/db" }
sagittarius-realtime = { path = "crates/realtime" }
sagittarius-app = { path = "crates/app" }
