[package]
name = "sagittarius-api"
version = "0.14.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "sagittarius-migrate"
path = "src/bin/sagittarius_migrate.rs"

[dependencies]
sagittarius-app = { workspace = true, features = ["openapi"] }
sagittarius-db = { workspace = true }
sagittarius-domain = { workspace = true, features = ["openapi"] }
sagittarius-realtime = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
p256 = { workspace = true }
serde_cbor = { workspace = true }
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
