[package]
name = "sagittarius-app"
version = "0.4.1"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
sagittarius-domain = { workspace = true }
sagittarius-db = { workspace = true }
sagittarius-realtime = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
lettre = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
