[package]
name = "sagittarius-domain"
version = "0.28.1"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true }
