[package]
name = "sagittarius-api"
version = "0.1.5"
edition = "2024"
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[[bin]]
name = "sagittarius-migrate"
path = "src/bin/sagittarius_migrate.rs"

[dependencies]
argon2 = { version = "0.5", features = ["password-hash"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
base64 = "0.22"
futures-util = "0.3"
http = "1"
dotenvy = "0.15"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde", "serde-human-readable"] }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.27"
url = "2"
